fix: correct module path to github.com/sonemaro/sosomi
- Replace github.com/soroush/sosomi with github.com/sonemaro/sosomi
- Update go.mod, all Go imports, and .golangci.yml

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -26,7 +26,7 @@ linters-settings:
   gofmt:
     simplify: true
   goimports:
-    local-prefixes: github.com/soroush/sosomi
+    local-prefixes: github.com/sonemaro/sosomi
   misspell:
     locale: US
   gocritic:
